package behavioral.stratery.duck_65CNTT1;

public class FlyWithWing implements IFlyBehavior{
    @Override
    public String fly() {
        return "bay...";
    }
}
