package behavioral.stratery.duck_65CNTT1;

public interface IFlyBehavior {
    String fly();
}
