package behavioral.stratery.duck_65CNTT1;

public interface IQuackBehavior {
    String quack();
}
