package behavioral.stratery.duck_65CNTT1;

public class SQuack implements IQuackBehavior{
    @Override
    public String quack() {
        return "Quack quack quack.....";
    }
}
