package behavioral.stratery.duck_65CNTT1;

public class Vit extends Duck65CNTT1{
    @Override
    public void display() {
        System.out.println("Em la Vit giời đáng yêu.");
        performFly();
        performQuack();
        swim();
        System.out.println("Ngay mai em lấy chồng.");
    }
}
